--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BrokerCloudCryptocurrency",
+  "name": "broker-cloud-cryptocurrency",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "0.58.4"
+    "react-native": "0.58.4",
+    "react-native-gesture-handler": "^1.0.15",
+    "react-navigation": "^3.2.1"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
