--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-native-gesture-handler": "^1.0.15",
     "react-native-material-ripple": "^0.8.0",
     "react-native-material-textfield": "^0.12.0",
-    "react-navigation": "^3.2.1"
+    "react-native-paper": "^2.11.0",
+    "react-native-vector-icons": "^6.2.0",
+    "react-navigation": "^3.2.1",
+    "react-navigation-material-bottom-tabs": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
