--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "await-to-js": "^2.1.1",
+    "axios": "^0.18.0",
     "dayjs": "^1.8.5",
     "react": "16.6.3",
     "react-native": "0.58.4",
