--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "await-to-js": "^2.1.1",
     "axios": "^0.18.0",
     "dayjs": "^1.8.5",
+    "querystring": "^0.2.0",
     "react": "16.6.3",
     "react-native": "0.58.4",
     "react-native-gesture-handler": "^1.0.15",
