--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-material-ripple": "^0.8.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-paper": "^2.11.0",
+    "react-native-snackbar": "^0.5.5",
     "react-native-svg": "^9.2.4",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.2.1",
